--- a/style.css
+++ b/style.css
@@ -266,6 +266,27 @@ body, main, article, .center-left-text {
     box-sizing: border-box;
 }
 
+header {
+    text-align: center;
+}
+
+header nav ul {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    padding: 0;
+    margin: 0 auto;
+    list-style: none;
+}
+
+@media (max-width: 768px) {
+    header nav ul {
+        flex-direction: column;
+        gap: 12px;
+    }
+}
+
 @media (max-width: 768px) {
     header {
       padding: 12px;
