--- a/style.css
+++ b/style.css
@@ -455,3 +455,14 @@ header nav ul {
       height: 40px;
     }
 }
+
+@media (min-width: 1000px) {
+  article {
+    max-width: 700px;
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+  main {
+    max-width: 1000px;
+  }
+}
